--- a/src/components/UI/Modals/Modal.module.css
+++ b/src/components/UI/Modals/Modal.module.css
@@ -1,36 +1,59 @@
-.modal {
+.modal__container {
   position: absolute;
   top: 50%;
   left: 50%;
   z-index: 50;
   transform: translate(-50%, -50%);
 
-  height: calc(100vh - 8rem);
-  width: calc(100vw - 8rem);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  height: 100vh;
+  width: 100vw;
+
+  background-color: RGBA(0, 0, 0, 0.45);
+}
+
+.modal {
+  position: relative;
+
+  max-width: 90%;
+  height: 90%;
 
   border: 2px solid grey;
   padding: 2.5rem;
 
   background-color: RGBA(0, 0, 0, 0.95);
 
+  overflow: hidden;
+}
+
+.modal__tagline {
+  font-size: 1.6rem;
+}
+
+.modal__content-container {
+  width: 100%;
+  height: 100%;
+
+  margin-top: 1.5rem;
+  padding-bottom: 8rem;
+
+  background-color: #1f1b1be3;
+
   overflow-y: auto;
 }
 
 .modal__close-btn {
-  position: sticky;
-  top: 1rem;
+  position: absolute;
+  top: 0;
+  right: 0;
   z-index: 50;
-
-  margin-left: auto;
-  margin-top: 1rem;
-
-  height: 0;
 
   display: flex;
   align-items: center;
   justify-content: center;
-
-  padding-top: 1.5rem;
 }
 
 .modal__close-btn > img {
@@ -46,12 +69,25 @@
 
 @media (max-width: 93.75em) {
   .modal {
-    height: 100vh;
-    width: 100vw;
+    max-width: 90%;
+    max-height: 90%;
     padding: 1rem;
   }
 
-  .modal__close-btn {
-    margin-bottom: 4rem;
+  .modal__content-container {
+    margin-top: 1rem;
+    padding-bottom: 0;
+    background-color: transparent;
+  }
+
+  .modal__close-btn > img {
+    height: 4rem;
+    width: 4rem;
+
+    padding: 1rem;
+
+    background-color: var(--menu-cobalt);
+
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
   }
 }
